教师功能Api